--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -186,10 +186,21 @@ function topFunction() {
   document.body.scrollTop = 0; // For Safari
   document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
 }
+
 </script>
 <script>$('#dergi a').on('click', function (e) {
   e.preventDefault()
   $(this).tab('show')
-})</script>
+})
+
+
+$('.slb').simplebox({
+    fadeSpeed: 300, // default is 400ms, applied to all fade animations in the plugin
+    darkMode: true, // default is false
+    postfix: "_full", // default is ""
+    hqClass: "highres" // default is "hq"
+});
+</script>
+
 </body>
 </html>
