--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -1138,3 +1138,35 @@ svg{
   
 
   .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+
+
+  #share-buttons {display: inline-block; vertical-align: middle; }
+  #share-buttons:after {content: ""; display: block; clear: both;}
+  #share-buttons > div {
+  position: relative;
+  text-align: left; 
+  height: 36px; 
+  width: 32px; 
+  float: left; 
+  text-align: center;
+  }
+  #share-buttons > div > svg {height: 16px; fill: #d5d5d5; margin-top: 10px;}
+  #share-buttons > div:hover {cursor: pointer;}
+  #share-buttons > div.facebook:hover > svg {fill: #3B5998;}
+  #share-buttons > div.twitter:hover > svg {fill: #55ACEE;}
+  #share-buttons > div.linkedin:hover > svg {fill: #0077b5;}
+  #share-buttons > div.pinterest:hover > svg {fill: #CB2027;}
+  #share-buttons > div.gplus:hover > svg {fill: #dd4b39;}
+  #share-buttons > div.mail:hover > svg {fill: #7D7D7D;}
+  #share-buttons > div.instagram:hover > svg {fill: #C73B92;}
+  #share-buttons > div.whatsapp:hover > svg {fill: #25D366;}
+  #share-buttons > div.telegram:hover > svg {fill: #0088cc;}
+  #share-buttons > div.facebook > svg {height: 18px; margin-top: 9px;}
+  #share-buttons > div.twitter > svg {height: 20px; margin-top: 8px;}
+  #share-buttons > div.linkedin > svg {height: 19px; margin-top: 7px;}
+  #share-buttons > div.pinterest > svg {height: 20px; margin-top: 9px;}
+  #share-buttons > div.gplus > svg {height: 17px; margin-top: 9px; position: relative; left: 1px;}
+  #share-buttons > div.mail > svg {height: 14px; margin-top: 11px;}
+
+  /* Simplexo - Lightbox css*/
+  #overlay,.cross{will-change:transform}#overlay,.center,.cross{top:0;right:0}.cross{position:fixed;margin:30px 55px 0 0;cursor:pointer;transition:.3s all ease-in-out;z-index:99;opacity:1}.cross::after,.cross::before{position:absolute;content:'';width:35px;height:2px}.cross::after{-webkit-transform:rotate(45deg);transform:rotate(45deg)}.cross::before{-webkit-transform:rotate(-45deg);transform:rotate(-45deg)}.cross--light::after,.cross--light::before{background-color:#000}.cross--dark::after,.cross--dark::before{background-color:#fff}.slb{box-shadow:2px 2px 12px 1px rgba(0,0,0,.2);cursor:-webkit-zoom-in;cursor:zoom-in}.slb--invert{box-shadow:2px 2px 12px 1px rgba(255,255,255,.3)}.slb--opened{cursor:auto}.pop-in{-webkit-animation:pop-in 250ms;-moz-animation:pop-in 250ms;-ms-animation:pop-in 250ms}.pop-out{-webkit-animation:pop-out 250ms;-moz-animation:pop-out 250ms;-ms-animation:pop-out 250ms}#overlay{display:none;width:100vw;height:100vh;position:fixed;left:0;bottom:0;pointer-events:none;cursor:pointer;z-index:100}.center{max-height:95%;max-width:95%;position:absolute;bottom:0;left:0;margin:auto}@-webkit-keyframes pop-in{0%{opacity:0;-webkit-transform:scale(.5);transform:scale(.5)}100%{opacity:1;-webkit-transform:scale(1);transform:scale(1)}}@keyframes pop-in{0%{opacity:0;-webkit-transform:scale(.5);transform:scale(.5)}100%{opacity:1;-webkit-transform:scale(1);transform:scale(1)}}@-webkit-keyframes pop-out{0%{opacity:1;-webkit-transform:scale(1);transform:scale(1)}100%{opacity:0;-webkit-transform:scale(.5);transform:scale(.5)}}@keyframes pop-out{0%{opacity:1;-webkit-transform:scale(1);transform:scale(1)}100%{opacity:0;-webkit-transform:scale(.5);transform:scale(.5)}}
