Markut SEO: Title ve Description

--- a/content/dergi/sayi-8/component/index.html
+++ b/content/dergi/sayi-8/component/index.html
@@ -1,7 +1,7 @@
 +++
 title = "Tasarım Sözlüğü: Component"
 seotitle ="Component Nedir? Anlamı ve Kullanımı"
-description=""
+description="Latin kökenli terim olan component; mühendislikte, tasarımda veya yazılımda sıklıkla karşımıza çıkan bir kelimedir. Meydana getiren parçalara denmektir."
 url="sayi-8/component-nedir"
 aciklama="Latin kökenli terim olan component; mühendislikte, tasarımda veya yazılımda sıklıkla karşımıza çıkan bir kelimedir. Com (ile, birlikte) + Ponere (Latince, Türkçe karşılığı: yer) (İngilizce: to place) (yerleştirmek) anlamını taşıyarak bir araya getirmek, meydana getiren parçalar olarak algılamak mümkün."
 type="sayfa"
