--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -126,16 +126,16 @@
               <h5 class="text-muted">Sosyal Medya</h5>
               <hr class="m-0">
               <ul class="list-group ">
-                <li class="list-group-item p-1"><a href="https://www.instagram.com/markutworks/" target="_blank">Instagram</a></li>
-                <li class="list-group-item p-1"><a href="https://www.linkedin.com/company/markut/" target="_blank">Linkedin</a></li>
-                <li class="list-group-item p-1"><a href="https://tr.pinterest.com/markutworks/" target="_blank">Pinterest</a></li>
-                <li class="list-group-item p-1"><a href="https://markutworks.tumblr.com/" target="_blank">Tumblr</a></li>
+                <li class="list-group-item p-1"><a href="https://www.instagram.com/markutworks/" target="_blank" rel="nofollow">Instagram</a></li>
+                <li class="list-group-item p-1"><a href="https://www.linkedin.com/company/markut/" target="_blank" rel="nofollow">Linkedin</a></li>
+                <li class="list-group-item p-1"><a href="https://tr.pinterest.com/markutworks/" target="_blank" rel="nofollow">Pinterest</a></li>
+                <li class="list-group-item p-1"><a href="https://markutworks.tumblr.com/" target="_blank" rel="nofollow">Tumblr</a></li>
               </ul>
           </div>
              <div class="col-md-12"><p class="footerdesc mt-2">
-              <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Markut | Endüstriyel Tasarım Dergisi</span> <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"> Creative Commons BY-NC-SA 4.0</a> ile lisanslanmıştır.
+              <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Markut | Endüstriyel Tasarım Dergisi</span> <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" rel="nofollow"> Creative Commons BY-NC-SA 4.0</a> ile lisanslanmıştır.
                 İçeriklerimizi başka platformlarda paylaşırken kaynak olarak <a href="https://www.markut.net">Markut.net</a> ibaresinin geçmesi gerekmektedir. Ticari olarak kullanılamaz.</p>
-                <div class="text-center mt-3"><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons Lisansı" class="text-center border-0"  src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></div>
+                <div class="text-center mt-3"><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" rel="nofollow"><img alt="Creative Commons Lisansı" class="text-center border-0"  src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></div>
            </div>
           </div>
         </div>
