--- a/themes/Markut/layouts/partials/header-sayi.html
+++ b/themes/Markut/layouts/partials/header-sayi.html
@@ -48,54 +48,9 @@
             </li>
             <li class="nav-item"><div class="custom-control custom-switch">
               <input type="checkbox" class="custom-control-input" id="darkSwitch" />
-              <label class="mb-0 idarkmode" for="darkSwitch"> <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                viewBox="0 0 104.4 85.2" style="enable-background:new 0 0 104.4 85.2;" xml:space="preserve">
-              <style type="text/css">
-               .stm0{fill:#020202;}
-               .stm1{fill:#FFFFFF;}
-              </style>
-              <g id="darkmodeicon">
-               <path class="stm0" d="M103.1,13.1L86.2,47c0,0.1-0.2,0.1-0.3,0.1l0,0c0.1,0,0,0.1,0,0.2l-16.7,5.6c-0.1,0-0.1,0-0.1-0.1v-0.1
-                 c0,0.1-0.1,0.3-0.3,0.3H57.8l-0.1,0.5c0-0.2,0.3-0.3,0.5-0.1l11,11l-5.7,4v7.3l-5.7-3.2v6.1l-4.2-2.6c-0.2-0.1-0.2-0.4,0-0.5
-                 l-0.4,0.3l-1.1,5.7L51,75.5l-0.4-0.3c0.2,0.2,0.2,0.5,0,0.6l-4.1,2.5v-6.1l-5.7,3.3v-7.3l-5.7-4l11-11.1c0.1-0.1,0.3-0.1,0.4,0.1
-                 l-0.1-0.4H35.3c-0.1,0-0.1-0.1-0.1-0.1v0c0,0.1-0.1,0.1-0.1,0.1l-16.6-5.5c-0.1,0-0.1-0.1,0-0.2c0,0,0,0-0.1,0c-0.1,0-0.2,0-0.2,0
-                 L1.1,13.1l41.1,4.6c0.1,0,0.1,0.1,0.1,0.1l0.1-0.1l4.1-10.2L35.1,1.8h10.6c2.3,0,4.5,0.5,6.4,1.5c1.6,0.8,3.1,1.9,4.3,3.3l9.4,10.5
-                 c0,0,0,0.1-0.1,0.1l0.2,0.1h0L103.1,13.1z"/>
-               <path class="stm1" d="M68.9,53H35.3c-0.2,0-0.4-0.2-0.4-0.4V35.8c0-4.4,1.7-8.6,4.7-11.8l0.1-0.1c3.3-3.5,7.7-5.4,12.5-5.4
-                 c3.8,0,7.4,1.2,10.4,3.5c4.4,3.3,6.9,8.3,6.9,13.8v16.8C69.4,52.8,69.1,53,68.9,53z M35.4,52.5h33.5V35.8c0-5.3-2.4-10.2-6.7-13.4
-                 c-2.9-2.2-6.4-3.4-10.1-3.4c-4.6,0-8.9,1.8-12.1,5.1L40,24.3c-3,3.1-4.6,7.2-4.6,11.5V52.5z"/>
-               <path class="stm1" d="M51.3,76L34.7,64.2L46,52.9c0.1-0.1,0.3-0.2,0.5-0.1c0.2,0,0.3,0.2,0.3,0.4v0L51.3,76z M35.5,64.1l15.1,10.8
-                 l-4.3-21.6L35.5,64.1z M46.3,53.2L46.3,53.2L46.3,53.2z"/>
-               <path class="stm1" d="M52.9,76l4.6-22.8c0-0.2,0.2-0.3,0.4-0.4c0.2-0.1,0.4,0,0.5,0.1l11.2,11.2L52.9,76z M58,53.3l-4.3,21.6
-                 l15.1-10.8L58,53.3z"/>
-               <path class="stm1" d="M52.1,82.4l-6-29.9h11.9L52.1,82.4z M51.2,75.4l0.9,4.4L57.5,53H46.8L51.2,75.4z"/>
-               <path class="stm1" d="M18.2,47.3C18.1,47.3,18.1,47.3,18.2,47.3c-0.2,0-0.3-0.1-0.3-0.2L0.7,12.8l41.5,4.6c0.1,0,0.2,0.1,0.3,0.2
-                 c0.1,0.1,0.1,0.2,0,0.3L40,24.2L40,24.3c-3,3.1-4.6,7.2-4.6,11.5c0,0.1-0.1,0.2-0.2,0.3L18.4,47.2C18.3,47.3,18.2,47.3,18.2,47.3z
-                  M1.5,13.4l16.7,33.3l16.7-11.1c0-4.4,1.7-8.5,4.7-11.7l2.4-6L1.5,13.4z M34.9,35.6C34.9,35.6,34.9,35.6,34.9,35.6L34.9,35.6z
-                  M42,17.8L42,17.8L42,17.8z"/>
-               <path class="stm1" d="M35,53c0,0-0.1,0-0.1,0l-16.6-5.5c-0.1,0-0.2-0.2-0.2-0.3s0-0.3,0.2-0.3l16.6-11.1c0.1-0.1,0.3-0.1,0.4,0
-                 c0.1,0.1,0.2,0.2,0.2,0.3v16.6c0,0.1-0.1,0.2-0.2,0.3C35.2,53,35.1,53,35,53z M35,52.5L35,52.5L35,52.5z M18.7,47l16.2,5.4V36.3
-                 L18.7,47z M18.4,47.2L18.4,47.2C18.4,47.2,18.4,47.2,18.4,47.2z"/>
-               <path class="stm1" d="M69.2,53c-0.1,0-0.1,0-0.2-0.1c-0.1-0.1-0.1-0.2-0.1-0.3V35.3l17.2,11.5c0.1,0.1,0.2,0.2,0.1,0.3
-                 c0,0.1-0.1,0.2-0.2,0.3L69.3,53C69.3,53,69.2,53,69.2,53z M69.1,52.5C69.1,52.5,69.1,52.5,69.1,52.5L69.1,52.5z M69.4,36.3v16.2
-                 L85.6,47L69.4,36.3z"/>
-               <path class="stm1" d="M39.1,25.2l7.2-18.1l20.5,10.3L52.1,19c-4.7,0-9,1.9-12.2,5.2L39.1,25.2z M46.6,7.8l-6.1,15.3
-                 c3.2-2.9,7.3-4.5,11.6-4.5l13-1.4L46.6,7.8z"/>
-               <path class="stm1" d="M65.8,17.4c0,0-0.1,0-0.1,0L34.1,1.5h11.6c2.3,0,4.5,0.5,6.5,1.5c1.7,0.8,3.1,1.9,4.4,3.3l9.6,10.7L66,17.3
-                 C66,17.4,65.9,17.4,65.8,17.4z M36.2,2l28.7,14.4l-8.7-9.7C55,5.4,53.6,4.3,52,3.5c-2-1-4.1-1.5-6.3-1.5H36.2z"/>
-               <path class="stm1" d="M40.5,75.9v-8.2l6.4,4.5L40.5,75.9z M41,68.7v6.4l5-2.8L41,68.7z"/>
-               <path class="stm1" d="M46.2,78.8v-7l4.5,3.2c0.2,0.1,0.3,0.3,0.3,0.5c0,0.2-0.1,0.4-0.3,0.5L46.2,78.8z M46.7,72.7v5.1l3.7-2.3
-                 c0,0,0.1-0.1,0.1-0.1c0,0,0-0.1,0-0.1L46.7,72.7z"/>
-               <path class="stm1" d="M58,78.7l-4.5-2.8c-0.2-0.1-0.3-0.3-0.3-0.4c0-0.2,0.1-0.4,0.2-0.5l4.6-3.3V78.7z M57.5,72.7l-3.8,2.7l0,0.1
-                 l3.8,2.4V72.7z"/>
-               <path class="stm1" d="M63.7,75.9l-6.4-3.6l6.4-4.5V75.9z M58.2,72.2l5,2.8v-6.4L58.2,72.2z"/>
-               <path class="stm1" d="M86.1,47.3c-0.1,0-0.2,0-0.2-0.1l-17-11.3v-0.1c0-5.3-2.4-10.2-6.7-13.4c-2.9-2.2-6.4-3.4-10.1-3.4l0-0.5
-                 l51.5-5.7L86.4,47.1c-0.1,0.1-0.1,0.2-0.3,0.2C86.1,47.3,86.1,47.3,86.1,47.3z M86,46.8L86,46.8L86,46.8z M69.4,35.7L86,46.8
-                 l16.7-33.3l-47.9,5.3c2.8,0.4,5.4,1.5,7.7,3.3C66.8,25.3,69.3,30.2,69.4,35.7z"/>
-               <path class="stm1" d="M52.1,43.1c-4,0-7.3-3.3-7.3-7.3c0-4,3.3-7.3,7.3-7.3c4,0,7.3,3.3,7.3,7.3C59.5,39.8,56.2,43.1,52.1,43.1z
-                  M52.1,29c-3.8,0-6.8,3.1-6.8,6.8c0,3.8,3.1,6.8,6.8,6.8c3.8,0,6.8-3.1,6.8-6.8C59,32,55.9,29,52.1,29z"/>
-              </g>
-              </svg></label>
+              <label class="mb-0 idarkmode" for="darkSwitch">
+                <img src="/img/logo-dark-mode-v2.svg" alt="Markut icon, karanlık mod için buton.">
+              </label>
             </div></li>
           </ul>
         </div>
