--- a/themes/Markut/layouts/partials/header.html
+++ b/themes/Markut/layouts/partials/header.html
@@ -31,8 +31,7 @@
             <li class="nav-item"><div class="custom-control custom-switch">
               <input type="checkbox" class="custom-control-input" id="darkSwitch" />
               <label class="mb-0 idarkmode" for="darkSwitch">
-                
-                <img src="/img/logo-dark-mode-v2.svg" alt="">
+                <img src="/img/logo-dark-mode-v2.svg" alt="Markut icon, karanlık mod için buton.">
               </label>
             </div></li>
           </ul>
