--- a/themes/Markut/layouts/partials/reklam/areklam.html
+++ b/themes/Markut/layouts/partials/reklam/areklam.html
@@ -1,5 +1,5 @@
 <!-- A Reklam Alanı-->
-<div class="container mt-6 markutreklam">
+<div class="container-fluid mt-6 markutreklam">
     <div class="row pt-md-3 pb-md-4 bg-sari mt-5">
       <div class="col-md-6"><a href="{{$.Site.Params.areklamurl}}"><img loading="lazy" class="img-fluid thumb" src="{{$.Site.Params.areklamimg}}" alt="Markut A Reklam Alanı Görselidir." width="700px" height="300px">
        </div>
