--- a/themes/Markut/layouts/partials/reklam/creklam.html
+++ b/themes/Markut/layouts/partials/reklam/creklam.html
@@ -1,5 +1,5 @@
 <!-- C Reklam Alanı-->
-<div class="container markutreklam">
+<div class="container-fluid markutreklam">
     <div class="row pt-md-3 pb-md-4 bg-sari mt-5">
       <div class="col-md-6"><a href="{{$.Site.Params.creklamurl}}"><img loading="lazy" class="img-fluid thumb" src="{{$.Site.Params.creklamimg}}" alt="Markut C Reklam Alanı Görselidir." width="700px" height="300px">
        </div>
