--- a/themes/Markut/layouts/partials/reklam/dreklam.html
+++ b/themes/Markut/layouts/partials/reklam/dreklam.html
@@ -1,4 +1,4 @@
-<div class="container markutreklam">
+<div class="container-fluid markutreklam">
     <div class="row ">
       <div class="col-md-6 pt-md-3 pb-md-4 mt-5">
       <!-- D1 Reklam Alanı Bitiş-->
