reklam margin değerleri vs

--- a/themes/Markut/layouts/partials/reklam/dreklam.html
+++ b/themes/Markut/layouts/partials/reklam/dreklam.html
@@ -3,7 +3,7 @@
       <div class="col-md-6 pt-md-3 pb-md-4 mt-5">
       <!-- D1 Reklam Alanı Bitiş-->
       <div class="bg-sari">
-        <div class="p-3">
+        <div class="p-3 mgen m-auto">
       <a href="{{$.Site.Params.d1reklamurl}}"><img loading="lazy" class="img-fluid thumb" src="{{$.Site.Params.d1reklamimg}}" alt="Markut D1 Reklam Alanı Görselidir." width="700px" height="300px">
        <p class="title mt-2 h2">{{$.Site.Params.d1reklamtitle}}</p>
        </a><p class="yazar"><a href="https://www.markut.net/reklam-sponsorluk/" target="_blank" rel="noopener noreferrer">Reklam</a></p>
@@ -14,7 +14,7 @@
       <div class="col-md-6 pt-md-3 pb-md-4 mt-5 "> 
       <!-- D2 Reklam Alanı-->
       <div class="bg-sari">
-        <div class="p-3">
+        <div class="p-3 mgen m-auto">
         <a href="{{$.Site.Params.d2reklamurl}}"><img loading="lazy" class="img-fluid thumb" src="{{$.Site.Params.d2reklamimg}}" alt="Markut D2 Reklam Alanı Görselidir." width="700px" height="300px">
         <p class="title mt-2 h2">{{$.Site.Params.d2reklamtitle}}</p>
         </a><p class="yazar"><a href="https://www.markut.net/reklam-sponsorluk/" target="_blank" rel="noopener noreferrer">Reklam</a></p>
