--- a/themes/Markut/layouts/partials/head.html
+++ b/themes/Markut/layouts/partials/head.html
@@ -80,7 +80,8 @@
 		 gtag('config', 'UA-122967892-3');
 	   </script>
 
-	   <script data-ad-client="ca-pub-2973108660504951" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6452397630431470"
+     crossorigin="anonymous"></script>
 	   {{end}}
 	</head>
 <body>
