--- a/themes/Markut/layouts/partials/head.html
+++ b/themes/Markut/layouts/partials/head.html
@@ -31,7 +31,7 @@
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Description }}{{ end }}"/>
 		<meta name="twitter:title" content="{{ .Title }} {{ if .IsHome }}| Endüstriyel Tasarım Dergisi {{ .Site.Params.Tagline }}{{ else }}| {{ .Site.Title }}{{ end }}"/>
-		<meta property="twitter:image" content='{{ if isset .Params "thumb"}} {{.Site.BaseURL}}{{.Params.thumb}} {{end}}'>
+		<meta name="twitter:image" content='{{ if isset .Params "thumb"}}{{.Site.BaseURL}}{{.Params.thumb}}{{end}}'>
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:locale" content="tr_TR" />
