--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -126,6 +126,7 @@
               <ul class="list-group ">
                 <li class="list-group-item p-1"><a href="https://www.instagram.com/markutworks/" target="_blank" rel="nofollow">Instagram</a></li>
                 <li class="list-group-item p-1"><a href="https://www.linkedin.com/company/markut/" target="_blank" rel="nofollow">Linkedin</a></li>
+                <li class="list-group-item p-1"><a href="https://twitter.com/markutworks" target="_blank" rel="nofollow">Twitter</a></li>
                 <li class="list-group-item p-1"><a href="https://tr.pinterest.com/markutworks/" target="_blank" rel="nofollow">Pinterest</a></li>
                 <li class="list-group-item p-1"><a href="https://markutworks.tumblr.com/" target="_blank" rel="nofollow">Tumblr</a></li>
               </ul>
