--- a/themes/Markut/layouts/email/list.html
+++ b/themes/Markut/layouts/email/list.html
@@ -1187,107 +1187,223 @@
             </table>
          </div>
          <!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-         <div style="margin: 0px auto; max-width: 600px">
-            <table
-               align="center"
-               border="0"
-               cellpadding="0"
-               cellspacing="0"
-               role="presentation"
-               style="width: 100%"
-            >
-               <tbody>
-                  <tr>
-                     <td
-                        style="
-                           direction: ltr;
-                           font-size: 0px;
-                           padding: 0px;
-                           text-align: center;
-                        "
-                     >
-                        <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:600px;" ><![endif]-->
-                        <div
-                           class="mj-column-per-100 mj-outlook-group-fix"
-                           style="
-                              font-size: 0px;
-                              text-align: left;
-                              direction: ltr;
-                              display: inline-block;
-                              vertical-align: top;
-                              width: 100%;
-                           "
-                        >
-                           <table
-                              border="0"
-                              cellpadding="0"
-                              cellspacing="0"
-                              role="presentation"
-                              width="100%"
-                           >
-                              <tbody>
-                                 <tr>
-                                    <td
-                                       style="
-                                          vertical-align: top;
-                                          padding-top: 20px;
-                                       "
-                                    >
-                                       <table
-                                          border="0"
-                                          cellpadding="0"
-                                          cellspacing="0"
-                                          role="presentation"
-                                          width="100%"
-                                       >
-                                          <tbody>
-                                             <tr>
-                                                <td
-                                                   align="center"
-                                                   style="
-                                                      font-size: 0px;
-                                                      padding: 10px 25px;
-                                                      word-break: break-word;
-                                                   "
-                                                >
-                                                   <div
-                                                      style="
-                                                         font-family: Roboto,
-                                                            Helvetica,
-                                                            sans-serif;
-                                                         font-size: 16px;
-                                                         font-weight: 300;
-                                                         line-height: 24px;
-                                                         text-align: center;
-                                                         color: #616161;
-                                                      "
-                                                   >
-                                                      <small
-                                                         >MARKUT | Endüstriyel
-                                                         Tasarım Dergisi |
-                                                         2021</small
-                                                      >
-                                                   </div>
-                                                </td>
-                                             </tr>
-                                          </tbody>
-                                       </table>
-                                    </td>
-                                 </tr>
-                              </tbody>
-                           </table>
-                        </div>
-                        <!--[if mso | IE]></td></tr></table><![endif]-->
-                     </td>
-                  </tr>
-               </tbody>
-            </table>
-         </div>
-         <!--[if mso | IE]></td></tr></table><![endif]-->
-      </div>
-   </body>
-</html>
-
+			<div style="margin: 0px auto; max-width: 600px">
+				<table
+				   align="center"
+				   border="0"
+				   cellpadding="0"
+				   cellspacing="0"
+				   role="presentation"
+				   style="width: 100%"
+				>
+				   <tbody>
+					  <tr>
+						 <td
+							style="
+							   direction: ltr;
+							   font-size: 0px;
+							   padding: 0px;
+							   text-align: center;
+							"
+						 >
+							<!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:600px;" ><![endif]-->
+							<div
+							   class="mj-column-per-100 mj-outlook-group-fix"
+							   style="
+								  font-size: 0px;
+								  text-align: left;
+								  direction: ltr;
+								  display: inline-block;
+								  vertical-align: top;
+								  width: 100%;
+							   "
+							>
+							   <table
+								  border="0"
+								  cellpadding="0"
+								  cellspacing="0"
+								  role="presentation"
+								  width="100%"
+							   >
+								  <tbody>
+									 <tr>
+										<td
+										   style="
+											  vertical-align: top;
+											  padding-top: 20px;
+										   "
+										>
+										   <table
+											  border="0"
+											  cellpadding="0"
+											  cellspacing="0"
+											  role="presentation"
+											  width="100%"
+										   >
+											  <tbody>
+												 <tr>
+													<td
+													   align="left"
+													   style="
+														  font-size: 0px;
+														  padding: 10px 25px;
+														  word-break: break-word;
+													   "
+													>
+													   <div
+														  style="
+															 font-family: Roboto,
+																Helvetica,
+																sans-serif;
+															 font-size: 16px;
+															 font-weight: 300;
+															 line-height: 24px;
+															 text-align: center;
+															 color: #616161;
+														  "
+													   >
+														  <small
+															 >Bu mail Markut'a abone
+															 olduğunuz için
+															 gönderilmiştir.
+															 Dilediğiniz zaman {{ "{{UnsubscribeURL}}" | plainify }}
+															 <a
+																style="
+																   color: #000000;
+																"
+																href=""
+																>abonelikten
+																çıkabilirsiniz.</a
+															 ><br>
+															 {{ "{{SenderInfo}}" | plainify }}</small
+														  ><br>
+														  <small
+															 >{{ "{{RewardsURL}}" | plainify }}<a
+																style="
+																   color: #5c5c5c;
+																"
+																href=""
+																>EmailOctopus
+																</a
+															 >Aracılığıyla.</small
+														  >
+													   </div>
+													</td>
+												 </tr>
+											  </tbody>
+										   </table>
+										</td>
+									 </tr>
+								  </tbody>
+							   </table>
+							</div>
+							<!--[if mso | IE]></td></tr></table><![endif]-->
+						 </td>
+					  </tr>
+				   </tbody>
+				</table>
+			 </div>
+			 <!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+			 <div style="margin: 0px auto; max-width: 600px">
+				<table
+				   align="center"
+				   border="0"
+				   cellpadding="0"
+				   cellspacing="0"
+				   role="presentation"
+				   style="width: 100%"
+				>
+				   <tbody>
+					  <tr>
+						 <td
+							style="
+							   direction: ltr;
+							   font-size: 0px;
+							   padding: 0px;
+							   text-align: center;
+							"
+						 >
+							<!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:600px;" ><![endif]-->
+							<div
+							   class="mj-column-per-100 mj-outlook-group-fix"
+							   style="
+								  font-size: 0px;
+								  text-align: left;
+								  direction: ltr;
+								  display: inline-block;
+								  vertical-align: top;
+								  width: 100%;
+							   "
+							>
+							   <table
+								  border="0"
+								  cellpadding="0"
+								  cellspacing="0"
+								  role="presentation"
+								  width="100%"
+							   >
+								  <tbody>
+									 <tr>
+										<td
+										   style="
+											  vertical-align: top;
+											  padding-top: 20px;
+										   "
+										>
+										   <table
+											  border="0"
+											  cellpadding="0"
+											  cellspacing="0"
+											  role="presentation"
+											  width="100%"
+										   >
+											  <tbody>
+												 <tr>
+													<td
+													   align="center"
+													   style="
+														  font-size: 0px;
+														  padding: 10px 25px;
+														  word-break: break-word;
+													   "
+													>
+													   <div
+														  style="
+															 font-family: Roboto,
+																Helvetica,
+																sans-serif;
+															 font-size: 16px;
+															 font-weight: 300;
+															 line-height: 24px;
+															 text-align: center;
+															 color: #616161;
+														  "
+													   >
+														  <small
+															 >MARKUT | Endüstriyel
+															 Tasarım Dergisi |
+															 2021</small
+														  >
+													   </div>
+													</td>
+												 </tr>
+											  </tbody>
+										   </table>
+										</td>
+									 </tr>
+								  </tbody>
+							   </table>
+							</div>
+							<!--[if mso | IE]></td></tr></table><![endif]-->
+						 </td>
+					  </tr>
+				   </tbody>
+				</table>
+			 </div>
+			 <!--[if mso | IE]></td></tr></table><![endif]-->
+		  </div>
+	   </body>
+	</html>
 
 <hr><hr><hr>
 {{end}}
