twitter hesabımız yayında c reklam, renk kodu

--- a/themes/Markut/layouts/partials/reklam/creklam.html
+++ b/themes/Markut/layouts/partials/reklam/creklam.html
@@ -1,6 +1,6 @@
 <!-- C Reklam Alanı-->
 <div class="container-fluid markutreklam">
-    <div class="row pt-md-3 pb-md-4 bg-sari mt-5">
+    <div class="row pt-md-3 pb-md-4 bg-sari mt-5" style="background-color: {{$.Site.Params.creklamrenk}};">
       <div class="col-md-6 text-right"><a href="{{$.Site.Params.creklamurl}}"><img loading="lazy" class="img-fluid thumb" src="{{$.Site.Params.creklamimg}}" alt="Markut C Reklam Alanı Görselidir." width="700px" height="300px">
        </div>
       <div class="col-md-6 mgen"> <p class="title mt-2 h2">{{$.Site.Params.creklamtitle}}</p>
