Yeni güncellemeler. Kritik olabilir.

--- a/themes/Markut/layouts/_default/single.html
+++ b/themes/Markut/layouts/_default/single.html
@@ -8,6 +8,6 @@
             {{.Content}}
         </div>
         </div>
-    </div>
+    </div><br><br><br>
     {{ partial "abone-ol.html" . }}
     {{ partial "footer.html" . }}
