--- a/themes/Markut/layouts/sayfa/single.html
+++ b/themes/Markut/layouts/sayfa/single.html
@@ -87,6 +87,10 @@
       </p>
       <div class="text-center">{{ partial "share-buttons.html" . }}</div>
   </div>
+
+  <div class="container">
+    <div class="col-md-6 offset-md-3 mb-0"> <img loading="lazy" class="img-fluid" src="/img/markut-mailde-v3.svg" alt="Markut Mailde İllustrasyon"></div>
+  </div>
         {{ partial "abone-ol.html" . }}
       <br>
       {{ partial "reklam/dreklam.html" . }}
