--- a/themes/Markut/layouts/partials/abone-ol.html
+++ b/themes/Markut/layouts/partials/abone-ol.html
@@ -1,4 +1,4 @@
-<div class="mailde mb-1 mt-6">
+<div class="mailde mb-1">
     <div class="mailde-title ">Dergimize Abone Olun</div>
     <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>   
 
