--- a/themes/Markut/layouts/partials/reklam/dreklam.html
+++ b/themes/Markut/layouts/partials/reklam/dreklam.html
@@ -4,10 +4,10 @@
       <!-- D1 Reklam Alanı Bitiş-->
       <div class="bg-sari">
         <div class="p-3 mgen m-auto">
-      <a href="{{$.Site.Params.d1reklamurl}}"><img loading="lazy" class="img-fluid thumb" src="{{$.Site.Params.d1reklamimg}}" alt="Markut D1 Reklam Alanı Görselidir." width="700px" height="300px">
-       <p class="title mt-2 h2">{{$.Site.Params.d1reklamtitle}}</p>
-       </a><p class="yazar"><a href="https://www.markut.net/reklam-sponsorluk/" target="_blank" rel="noopener noreferrer">Reklam</a></p>
-       <p class="desc">{{$.Site.Params.d1reklamdesc}}</p>
+      <a href="{{$.Site.Params.d1reklamurl}}" target="_blank"><img loading="lazy" class="img-fluid thumb pt-3" src="{{$.Site.Params.d1reklamimg}}" alt="Markut D1 Reklam Alanı Görselidir." width="700px" height="300px">
+       </a><a href="{{$.Site.Params.d1reklamurl}}" target="_blank"><p class="title mt-2 pt-2 h2">{{$.Site.Params.d1reklamtitle}}</p></a>
+       <p class="yazar"><a href="https://www.markut.net/reklam-sponsorluk/" target="_blank" rel="noopener noreferrer">Reklam</a></p>
+       <a href="{{$.Site.Params.d1reklamurl}}" target="_blank"><p class="desc">{{$.Site.Params.d1reklamdesc}}</p></a>
       </div></div></div>
       <!-- D1 Reklam Alanı Bitiş-->
   
@@ -15,10 +15,10 @@
       <!-- D2 Reklam Alanı-->
       <div class="bg-sari">
         <div class="p-3 mgen m-auto">
-        <a href="{{$.Site.Params.d2reklamurl}}"><img loading="lazy" class="img-fluid thumb" src="{{$.Site.Params.d2reklamimg}}" alt="Markut D2 Reklam Alanı Görselidir." width="700px" height="300px">
-        <p class="title mt-2 h2">{{$.Site.Params.d2reklamtitle}}</p>
-        </a><p class="yazar"><a href="https://www.markut.net/reklam-sponsorluk/" target="_blank" rel="noopener noreferrer">Reklam</a></p>
-        <p class="desc">{{$.Site.Params.d2reklamdesc}}</p>
+        <a href="{{$.Site.Params.d2reklamurl}}" target="_blank"><img loading="lazy" class="img-fluid thumb pt-3" src="{{$.Site.Params.d2reklamimg}}" alt="Markut D2 Reklam Alanı Görselidir." width="700px" height="300px">
+        </a><a href="{{$.Site.Params.d1reklamurl}}" target="_blank"><p class="title mt-2 pt-2 h2">{{$.Site.Params.d2reklamtitle}}</p></a>
+        <p class="yazar"><a href="https://www.markut.net/reklam-sponsorluk/" target="_blank" rel="noopener noreferrer">Reklam</a></p>
+        <a href="{{$.Site.Params.d1reklamurl}}" target="_blank"><p class="desc">{{$.Site.Params.d2reklamdesc}}</p></a>
       </div></div>
       <!-- D2 Reklam Alanı Bitiş-->
      </div>
