--- a/themes/Markut/layouts/index.html
+++ b/themes/Markut/layouts/index.html
@@ -14,8 +14,8 @@
         </a>
 </div>
 -->
-
-<div class="container bg-green">
+<br><br>
+<div class="container mt-5 bg-green">
               <div class="bg-mrkt" style="background: url(/img/kalp-duyuru.svg); background-repeat: no-repeat; background-position-y: bottom; max-height: calc(800px - 350 * (100vw - 320px) / 1180); height: none;">
                 <div class="pl-md-5 pr-md-5 pt-md-5 mt-md-5">     
                 <div class="offset-md-4 col-md-8 offset-1 col-10"><h3 class="mt-md-5 mt-0">Duyuru!</h3>
