--- a/themes/Markut/layouts/yazar/terms.html
+++ b/themes/Markut/layouts/yazar/terms.html
@@ -19,10 +19,16 @@
            {{ end }}
           </div>
 -->
-          <h3>Konuk Yazarlar</h3>
+          <h3>Konuk Yazarlar</h3><br>
           <ul>
+            <li>
+              Ömer Faruk Çam | Sayı 1 |  <a href="https://www.markut.net/sayi-1/otomobillerin-hayatimizdaki-yeri/" target="_blank" rel="noopener noreferrer">Otomobillerin Hayatımızdaki Yeri</a>
+              </li>
+            <li>
+                Ecem Hasbay | Sayı 5 | <a href="https://www.markut.net/sayi-5/shakers/" target="_blank" rel="noopener noreferrer">Yeryüzünde Cenneti Yaratma Arzusu: Shakers</a>
+              </li>
              <li>
-             Michael Nicholasian | <a href="https://www.markut.net/sayi-10/abd-baskanlik-masasi-resolute-desk/" target="_blank" rel="noopener noreferrer">ABD Başkanlık Masası: Resolute Desk</a>
+             Michael Nicholasian | Sayı 10 | <a href="https://www.markut.net/sayi-10/abd-baskanlik-masasi-resolute-desk/" target="_blank" rel="noopener noreferrer">ABD Başkanlık Masası: Resolute Desk</a>
              </li>
           </ul>
     {{ partial "footer.html" . }}
